src/snapshots/interpreter__parser__tests__known_macros@mixed2.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\newtheorem*{m1}{m2}{not part}`"
---
stmts:
  - KnownMacro:
      name: newtheorem
      args:
        - Block:
            - Text: m1
        - Block:
            - Text: m2
      is_alt: true
  - Block:
      - Text: not
      - Token: Space
      - Text: part
errors: []

