src/snapshots/interpreter__parser__tests__known_macros@only_opt_present.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\linebreak[5][not part]`"
---
stmts:
  - KnownMacro:
      name: linebreak
      args:
        - SquareBlock:
            - Token:
                Number: "5"
      is_alt: false
  - SquareBlock:
      - Text: not
      - Token: Space
      - Text: part
errors: []

