src/snapshots/interpreter__parser__tests__known_macros@sm.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\vspace*{pkg}[not part]`"
---
stmts:
  - KnownMacro:
      name: vspace
      args:
        - Block:
            - Text: pkg
      is_alt: true
  - SquareBlock:
      - Text: not
      - Token: Space
      - Text: part
errors: []

