src/snapshots/interpreter__parser__tests__known_macros@som.snap
---
source: src/parser.rs
expression: "AstWErrors { stmts, errors: p.errors() }"
info: "input = `\\chapter*[opt]{pkg}[not part]`"
---
stmts:
  - KnownMacro:
      name: chapter
      args:
        - SquareBlock:
            - Text: opt
        - Block:
            - Text: pkg
      is_alt: true
  - SquareBlock:
      - Text: not
      - Token: Space
      - Text: part
errors: []

